After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742713 - [PATCH] Fix GObjectClass dispose field init in gedit_print_job_class_ini()
[PATCH] Fix GObjectClass dispose field init in gedit_print_job_class_ini()
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
3.14.x
Other All
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2015-01-10 16:34 UTC by maksqwe
Modified: 2015-01-11 16:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (948 bytes, patch)
2015-01-10 16:34 UTC, maksqwe
accepted-commit_now Details | Review

Description maksqwe 2015-01-10 16:34:53 UTC
Created attachment 294233 [details] [review]
Patch

gedit-print-job.c 190

object_class->get_property = gedit_print_job_get_property;
object_class->set_property = gedit_print_job_set_property;
object_class->finalize = gedit_print_job_finalize;
object_class->finalize = gedit_print_job_dispose;  <====
Comment 1 jessevdk@gmail.com 2015-01-10 16:41:36 UTC
Review of attachment 294233 [details] [review]:

Wow, nice catch!
Comment 2 Paolo Borelli 2015-01-11 16:27:18 UTC
This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.