Fix GObjectClass dispose field init in gedit_print_job_class_ini()

Signed-off-by: Maks Naumov <maksqwe1@ukr.net>

https://bugzilla.gnome.org/show_bug.cgi?id=742713